--- a/app/views/receipts/edit.html.erb
+++ b/app/views/receipts/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing Receipt</h1>
 
-<%= render 'form', receipt: @receipt %>
+<h1 class="text-dark py-5 text-center">Changed Mind! Upload a new Invoice</h1>
+<hr>
+<div class="text-center">
+	<%= render 'form', receipt: @receipt %>
+</div>
+<hr>
+<br>
 
-<%= link_to 'Show', @receipt %> |
-<%= link_to 'Back', receipts_path %>
+<div class="row">
+	<div class="col">
+		<%= link_to "Show", @receipt, :class => 'btn btn-info btn-block' %>
+	</div>
+	<div class="col">
+		<%= link_to "Back", receipts_path, :class => 'btn btn-warning btn-block' %>
+	</div>
+</div>
