--- a/app/views/receipts/index.html.erb
+++ b/app/views/receipts/index.html.erb
@@ -1,27 +1,29 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Receipts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Owner</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @receipts.each do |receipt| %>
+<div class="container">
+  <h1 class="text-dark py-5 text-center">Available Invoices in the system</h1>
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= receipt.owner %></td>
+        <th scope="col">File Name</th>
+        <th scope="col">Show</th>
+        <th scope="col">Edit</th>
+        <th scope="col">Destroy</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @receipts.each do |receipt| %>
+      <tr>
+        <td><%= receipt.upload.filename if receipt && receipt.upload %></td>
         <td><%= link_to 'Show', receipt %></td>
         <td><%= link_to 'Edit', edit_receipt_path(receipt) %></td>
         <td><%= link_to 'Destroy', receipt, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+      <%end%>
+    </tbody>
+  </table>
 
-<br>
-
-<%= link_to 'New Receipt', new_receipt_path %>
+  <div class="row">
+    <div class="col">
+      <%= link_to "Add Invoice", new_receipt_path, :class => 'btn btn-success btn-block' %>
+    </div>
+  </div>
+</div>
